--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,19 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
+html {
+  background: #000000;
+  color: #ffffff;
+}
+
+.navbar {
+  list-style: none;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #ffffff;
+}
