--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,13 @@ header {
 
 #profile-picture-container {
   border: 1px solid red;
+  display: flex;
+  column-gap: 0.75em;
+  font-size: 0.85em;
+}
+#profile-picture-container p {
+  align-self: center;
+  font-size: 0.85rem;
 }
 
 #profile-picture {
@@ -31,10 +38,11 @@ header {
 }
 
 .links-container {
-  margin: 1vw;
+  margin: 2vw;
   padding: 1em;
   display: flex;
-  column-gap: 1.5em;
+  align-items: center;
+  column-gap: 1.3em;
   font-size: 0.8em;
   list-style: none;
   background-color: grey;
