--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -38,7 +40,7 @@ header {
 }
 
 .links-container {
-  margin: 2vw;
+  margin: vw;
   padding: 1em;
   display: flex;
   align-items: center;
