--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@ header {
 .navbar {
   width: 100%;
   display: flex;
-
   justify-content: space-between;
   background-color: #759eb8;
 }
@@ -50,12 +49,15 @@ header {
 }
 
 .links-container a {
-  text-decoration: none;
   font-size: 4vw;
-  cursor: pointer;
-  color: #e4fde1;
 }
 
-.links-container a:hover {
+.navbar a {
+  text-decoration: none;
+  color: #e4fde1;
+  cursor: pointer;
+}
+
+.navbar a:hover {
   color: black;
 }
