added hero image for welcome page

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,19 @@ html {
   background: #454545;
   color: #e4fde1;
 }
+
+#main-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  height: 100vh;
+  width: 100vw;
+}
+
 header {
   position: fixed;
   width: 100%;
 }
+
 .navbar {
   width: 100%;
   display: flex;
@@ -60,4 +69,24 @@ header {
 
 .navbar a:hover {
   color: black;
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/heroimage.jpg);
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  top: 12vh;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
