--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html {
 #main-grid {
   display: grid;
   grid-template-columns: 1fr;
+
   height: 100vh;
   width: 100vw;
 }
@@ -74,12 +75,12 @@ header {
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/heroimage.jpg);
-  height: 50%;
+  height: 50vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  top: 12vh;
+  margin-top: 5rem;
   z-index: -1;
 }
 
@@ -90,4 +91,16 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+}
+
+.hero-text h1 {
+  font-size: 2rem;
+}
+
+.hero-text p {
+  font-size: 1rem;
+}
+
+section {
+  display: block;
 }
