--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ header {
   display: flex;
   flex-direction: column;
 }
+
 #profile-picture-container p {
   font-size: 3.1vw;
 }
@@ -113,11 +114,18 @@ section {
   padding: 3rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   border: 1px solid red;
 }
 
 .about-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid red;
+}
+
+.about-container img {
+  width: 30vw;
+  margin: 0 auto;
 }
 
 #about h2,
@@ -140,7 +148,6 @@ section {
 .project-container img {
   width: 55vw;
   padding-bottom: 2rem;
-  margin: 0 auto;
 }
 
 .project-container p {
