new hero image for home page

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,13 +75,13 @@ header {
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../images/heroimage.jpg);
-  height: 50vw;
+    url(../images/hero2.jpg);
+  height: 95vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  margin-top: 5rem;
+  margin-top: 4rem;
   z-index: -1;
 }
 
@@ -137,7 +137,7 @@ section {
 
 #about p,
 #projects h3 {
-  padding: 2rem 0;
+  padding: 1.5rem 0;
   margin: 0 auto;
 }
 
