--- a/css/styles.css
+++ b/css/styles.css
@@ -148,10 +148,26 @@ section {
 
 .project-container img {
   width: 55vw;
-  padding-bottom: 2rem;
-  margin: 1.5rem;
+  margin-bottom: 0.1rem;
 }
 
 .project-container p {
-  padding-bottom: 1rem;
+  padding-bottom: 0.8rem;
+}
+
+.project-img-container {
+  width: 90%;
+  display: flex;
+  flex-wrap: wrap;
+
+  justify-content: space-evenly;
+  padding-bottom: 2rem;
+  margin: 1.5rem;
+  border: 1px solid red;
+}
+
+.project-img-container button {
+  font-size: 0.8rem;
+
+  width: 3rem;
 }
