changed button positions

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,12 @@ section {
 @media only screen and (min-width: 992px) {
 }
 
+.project-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid red;
+}
+
 .project-container img {
   width: 55vw;
   margin-bottom: 0.1rem;
@@ -160,7 +166,7 @@ section {
   display: flex;
   flex-wrap: wrap;
 
-  justify-content: space-evenly;
+  justify-content: center;
   padding-bottom: 2rem;
   margin: 1.5rem;
   border: 1px solid red;
@@ -168,6 +174,6 @@ section {
 
 .project-img-container button {
   font-size: 0.8rem;
-
   width: 3rem;
+  margin: 0 1.5rem;
 }
