--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ section {
 
   justify-content: center;
   padding-bottom: 2rem;
-  margin: 1.5rem;
+  margin: 0.2rem 1.5rem 0.5rem 1.5rem;
   border: 1px solid red;
 }
 
@@ -176,4 +176,8 @@ section {
   font-size: 0.8rem;
   width: 3rem;
   margin: 0 1.5rem;
+}
+
+.project-icon {
+  align-self: center;
 }
