--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ section {
 #about,
 #projects,
 #contact {
-  width: 90%;
+  width: 94%;
   margin: 0 auto;
   padding: 2.7rem 2.7rem 0rem 2.7rem;
   display: flex;
@@ -143,7 +143,10 @@ section {
 }
 
 /* Desktop */
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 600px) {
+  .project-icon {
+    font-size: 2em;
+  }
 }
 
 .project-container {
@@ -164,20 +167,25 @@ section {
 .project-img-container {
   width: 90%;
   display: flex;
-  flex-wrap: wrap;
 
-  justify-content: center;
+  flex-wrap: wrap;
   padding-bottom: 2rem;
   margin: 0.2rem 1.5rem 0.5rem 1.5rem;
   border: 1px solid red;
 }
 
 .project-img-container button {
+  align-self: start;
+  justify-content: center;
   font-size: 0.8rem;
   width: 3rem;
   margin: 0 1.5rem;
 }
 
 .project-icon {
-  align-self: center;
+  display: flex;
+  justify-content: flex-start;
+  row-gap: 0.2em;
+  flex-direction: column;
+  border: 1px solid red;
 }
