added margin-left to center for mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -175,11 +175,12 @@ section {
 }
 
 .project-img-container button {
+  margin-left: 2rem;
   align-self: start;
   justify-content: center;
   font-size: 0.8rem;
-  width: 3rem;
-  margin: 0 1.5rem;
+  width: 4rem;
+  border-radius: 5%;
   border: 1px solid red;
 }
 
