decreased padding-bottom of project-image-container

--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ section {
   display: flex;
 
   flex-wrap: wrap;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   margin: 0.2rem 1.5rem 0.5rem 1.5rem;
   border: 1px solid red;
 }
@@ -191,4 +191,10 @@ section {
   row-gap: 0.5em;
   flex-direction: column;
   border: 1px solid red;
+}
+
+.contact-links a {
+  color: white;
+
+  text-decoration: none;
 }
