--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,11 @@ section {
 
 .contact-details {
   color: white;
-
   text-decoration: none;
   font-weight: 900;
+}
+
+footer {
+  margin-left: 2rem;
+  padding: 1rem;
 }
