--- a/css/styles.css
+++ b/css/styles.css
@@ -26,22 +26,22 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  background-color: #2a1b1b;
+  background-color: #432929;
 }
 
 #profile-picture-container {
-  display: flex;
   margin: 0 auto;
+  border: 1px solid red;
+  width: 100%;
 }
 
-#profile-picture-container p {
+#profile-name {
   font-size: 3.1vw;
   padding-bottom: 0.4em;
 }
 
 #profile-picture {
   margin: 0.2rem 0.4rem 0 0.4rem;
-  justify-content: center;
   width: 13vw;
   border-radius: 50%;
 }
@@ -228,12 +228,17 @@ footer {
     max-height: 10vh;
   }
   #profile-picture-container {
+    display: flex;
+
     margin: 0;
   }
   #profile-picture-container img {
     max-width: 8vh;
     max-height: 8vh;
   }
+  #profile-name {
+  }
+
   .links-container {
     flex-grow: 0;
   }
