--- a/css/styles.css
+++ b/css/styles.css
@@ -257,4 +257,10 @@ footer {
   .project-img {
     max-width: 33vw;
   }
+  .project-content1 {
+    grid-column-start: 2;
+  }
+  .project-content2 {
+    grid-column-start: 1;
+  }
 }
