--- a/css/styles.css
+++ b/css/styles.css
@@ -260,6 +260,10 @@ footer {
   .project-content1 {
     grid-column-start: 2;
   }
+  .project-content1 h3,
+  .project-content2 h3 {
+    text-align: center;
+  }
   .project-content2 {
     grid-column-start: 1;
   }
