contact links added in flexbox for desktop

--- a/css/styles.css
+++ b/css/styles.css
@@ -183,6 +183,13 @@ section {
   border: 1px solid red;
 }
 
+.button-container {
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  /* border: 1px solid red; */
+}
+
 .project-icon {
   display: flex;
   justify-content: flex-start;
@@ -285,5 +292,10 @@ footer {
   }
   .about-img-container {
     margin-top: 2rem;
+  }
+  .contact-links {
+    width: 35%;
+    display: flex;
+    justify-content: space-evenly;
   }
 }
