added on hover effect for project buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -189,9 +189,18 @@ section {
   align-self: start;
   justify-content: center;
   font-size: 0.8rem;
+  background-color: red;
+  color: black;
   width: 4rem;
+  height: 1.2rem;
   border-radius: 5%;
-  border: 1px solid red;
+  border: 1px solid black;
+}
+
+.project-img-container button:hover {
+  background-color: green;
+  color: white;
+  border: 1px solid white;
 }
 
 .button-container {
