increased width of icon container and column cap in contact section

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,8 +326,9 @@ footer {
     margin-top: 2rem;
   }
   .contact-links {
-    width: 35%;
+    width: 45%;
     display: flex;
     justify-content: space-evenly;
+    column-gap: 1.5rem;
   }
 }
