--- a/css/styles.css
+++ b/css/styles.css
@@ -203,8 +203,9 @@ section {
   font-size: 0.8rem;
   background-color: red;
   color: black;
-  width: 4rem;
-  height: 1.2rem;
+  width: 13vw;
+  max-width: 5rem;
+  height: 1.6rem;
   border-radius: 5%;
   border: 1px solid black;
 }
@@ -212,6 +213,7 @@ section {
 .project-img-container button:hover {
   background-color: green;
   color: white;
+  cursor: pointer;
   border: 1px solid white;
 }
 
