--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ section {
 
 .project-icon-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 0.5rem 0;
   flex-direction: column;
