--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ section {
   flex-wrap: wrap;
   padding-bottom: 1rem;
   margin: 0.2rem 1.5rem 0.5rem 1.5rem;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .project-img {
@@ -238,12 +238,7 @@ section {
   align-items: center;
   padding: 0.5rem 0;
   flex-direction: column;
-  border: 1px solid red;
-}
-
-.project-icon-container i {
-  border: 1px solid red;
-  height: 1.5rem;
+  /* border: 1px solid red; */
 }
 
 #contact {
@@ -319,15 +314,6 @@ footer {
   .project-img-container {
     margin-top: 1.3rem;
   }
-
-  /* .project-icon-right {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    row-gap: 0.5em;
-    flex-direction: column;
-    border: 1px solid red;
-  } */
 
   .project-content1 h3,
   .project-content2 h3,
