--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ header {
 }
 
 .navbar {
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: space-between;
   background-color: #432929;
@@ -86,7 +86,8 @@ header {
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../images/hero2.jpg);
-  height: 92.5vh;
+  height: 93.5vh;
+
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -98,7 +99,7 @@ header {
 .hero-text {
   text-align: center;
   position: absolute;
-  top: 47%;
+  top: 48%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -145,7 +146,7 @@ section {
 }
 
 .about-img-container img {
-  max-width: 30vw;
+  max-width: 18rem;
   margin: 0 auto;
 }
 
