changed hero text sub text

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ header {
   top: 48%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: #e4fde1;
 }
 
 .hero-text h1 {
@@ -97,6 +97,7 @@ header {
 
 .hero-text p {
   font-size: 4vw;
+  color: #fea900;
 }
 
 section {
