--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,9 @@ header {
   position: fixed;
 }
 
+a {
+  text-decoration: none;
+}
 .navbar {
   width: 100vw;
   display: flex;
@@ -58,7 +61,6 @@ header {
 }
 
 .navbar a {
-  text-decoration: none;
   color: #e4fde1;
   cursor: pointer;
   letter-spacing: 0.235px;
@@ -207,14 +209,13 @@ section {
 
 .project-img-container a {
   color: rgb(104, 192, 255);
-  text-decoration: none;
+
   padding-right: 1rem;
   font-size: 0.9rem;
 }
 
 .button-container {
   margin: 0 2.2rem 0;
-  /* border: 1px solid red; */
 }
 
 .button-container a:hover {
