--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ a {
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background-image: linear-gradient(#00000080, #00000080),
     url(../images/hero2.jpg);
   height: 93.5vh;
   background-position: center;
